CHATS_SIT/force-app/main/default/objects/Case_Review__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipName>Case_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Case Review Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00373</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closure_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Closure Date (if applicable)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligibility_Period_From__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Eligibility Period (From)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligibility_Period_To__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Eligibility Period (To)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Improper_Payment_Amount__c</fullName>
        <label>Improper Payment Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Improper_Payment__c</fullName>
        <label>Improper Payment?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00619</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Fee__c</fullName>
        <label>Parent Fee for Sample Month</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recent_Eligibility_Detrm__c</fullName>
        <label>Most Recent Eligibility Determination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Application</fullName>
                </value>
                <value>
                    <fullName>Re-determination</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Error free</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Completed with errors</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reviewer_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reviewer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewer_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reviewer Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Month__c</fullName>
        <label>Sample Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00614</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sample_Year__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sample Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subsidy_Amount_Paid__c</fullName>
        <label>Subsidy Amount Paid</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Elements__c</fullName>
        <label>Error Elements</label>
        <summaryFilterItems>
            <field>Case_Review_Response__c.CaseReview_QuestionMain__c</field>
            <operation>equals</operation>
            <value>No</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Review_Response__c.Case_Review__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Applicable_Elements__c</fullName>
        <label>Applicable Elements</label>
        <summaryFilterItems>
            <field>Case_Review_Response__c.CaseReview_QuestionMain__c</field>
            <operation>notEqual</operation>
            <value>N/A</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Review_Response__c.Case_Review__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Element_Accuracy__c</fullName>
        <formula>1 - (Error_Elements__c / Applicable_Elements__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Element Accuracy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IsSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Change_Indicator__c</fullName>
        <label>Change Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Correct_Subsidy_Amount__c</fullName>
        <formula>IF(
  ISPICKVAL(Improper_Payment_Type__c, &apos;Overpayment&apos;),
  Subsidy_Amount_Paid__c - Improper_Payment_Amount__c,
  IF(
    ISPICKVAL(Improper_Payment_Type__c, &apos;Underpayment&apos;),
    Subsidy_Amount_Paid__c + Improper_Payment_Amount__c,
    Subsidy_Amount_Paid__c
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Correct Subsidy Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Improper_Payment_Type__c</fullName>
        <label>Overpayment or Underpayment?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Overpayment</fullName>
                </value>
                <value>
                    <fullName>Underpayment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Accuracy_Rate__c</fullName>
        <formula>IF(OR(Subsidy_Amount_Paid__c = 0,ISPICKVAL(Improper_Payment__c , &apos;N&apos;)), 1,
            IF(Subsidy_Amount_Paid__c = Correct_Subsidy_Amount__c, 1,
            IF(AND(Correct_Subsidy_Amount__c = 0,ISPICKVAL(Improper_Payment__c , &apos;Y&apos;)), 0,
IF(Subsidy_Amount_Paid__c &gt; Correct_Subsidy_Amount__c,
  Correct_Subsidy_Amount__c / Subsidy_Amount_Paid__c,
  Subsidy_Amount_Paid__c / Correct_Subsidy_Amount__c)
  )
            )
)
</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Accuracy Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Case Review</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Sample_Month__c</columns>
        <columns>Sample_Year__c</columns>
        <columns>Reviewer_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR{000000}</displayFormat>
        <label>Case Review ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>