CHATS_SIT/force-app/main/default/objects/Case_Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Review_Status__c</columns>
    <columns>Sample_Month__c</columns>
    <columns>Sample_Year__c</columns>
    <columns>Reviewer_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>