CHATS_SIT/force-app/main/default/objects/Case_Review__c/listViews/Arapahoe_Lead_Workers_Supervisors_Case_Review.listView-meta.xml
<ListView>
    <fullName>Arapahoe_Lead_Workers_Supervisors_Case_Review</fullName>
    <filterScope>Queue</filterScope>
    <label>Arapahoe Lead Workers / Supervisors</label>
    <queue>Arapahoe_Lead_Workers_Supervisors</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>