CHATS_SIT/force-app/main/default/objects/Case_Review__c/listViews/Broomfield_Lead_Workers_Supervisors_Case_Review.listView-meta.xml
<ListView>
    <fullName>Broomfield_Lead_Workers_Supervisors_Case_Review</fullName>
    <filterScope>Queue</filterScope>
    <label>Broomfield Lead Workers / Supervisors</label>
    <queue>Broomfield_Lead_Workers_Supervisors</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>